@@ -1,3 +1,12 @@
+2012-03-19  Gavin Barraclough  <barraclough@apple.com>
+
+        Unreviewed - revent a couple of files accidentally committed.
+
+        * runtime/Arguments.cpp:
+        (JSC::Arguments::defineOwnProperty):
+        * runtime/JSFunction.cpp:
+        (JSC::JSFunction::defineOwnProperty):
+
 2012-03-19  Jessie Berlin  <jberlin@apple.com>
 
         Another Windows build fix after r111129.
